Fixed main container spacing

--- a/styles.css
+++ b/styles.css
@@ -170,6 +170,10 @@ body {
     font-family: "Roboto Condensed", sans-serif;
 }
 
+.custom-container {
+    width: 80% !important;
+ }
+
 /*************************************************
      Grid Layout for 3 Columns Top News Section
 **************************************************/
@@ -371,7 +375,7 @@ featured  -- scroll bar  ****!!!!
 }
 
 .opinion-item {
-    justify-content: flex-end;
+    justify-content: flex-start;
 }
 
 .debate-item img,
@@ -919,9 +923,9 @@ Media Queries
 }
 
   
-    .opinion-item {
+   /* .opinion-item {
         justify-content: flex-start;
-    }
+    }*/
 
 
     .footer-top,
